--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
 	"manifest_version": 2,
 	"content_scripts": [
 		{
-			"matches": ["https://github.com/*"],
+			"matches": ["https://github.com/*", "https://riot.im/app/*"],
 			"js": ["script.js"]
 		}
 	]
